# N-Body-Simulation---MPI-Pthread-Openmp

./: CMakeLists.txt  readme.md
include/nbody/: body_BS.hpp  body_CUDA.hpp  body_MPI.hpp  body_Pthread.hpp  body_openMP.hpp
src/: main.cu  main_BS.cpp  main_MPI.cpp  main_Pthread.cpp  main_openmp.cpp  main_seq.cpp
